<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_120dp"
        android:fontFamily="@font/poppins"
        android:text="@string/text_update_covid_19"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_176dp"
        android:fontFamily="@font/poppins"
        android:text="@string/text_ayo_lawan_covid_19"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_sub_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17dp"
        android:layout_marginEnd="@dimen/_153dp"
        android:fontFamily="@font/poppins"
        android:text="@string/text_di_indonesia_bersama"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_200dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_title2"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_25dp"
            android:layout_height="@dimen/_25dp"
            android:src="@drawable/maps"
            android:contentDescription="@string/cont_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/text_indonesia"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/kasus_utama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:contentDescription="@string/cont_desc" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/_180dp"
        android:layout_height="@dimen/_180dp"
        android:src="@drawable/ilustrasi"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/cont_desc" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_30dp"
        android:layout_marginBottom="@dimen/_50dp"
        android:fontFamily="@font/poppins"
        android:text="@string/text_total_kasus"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvPositive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_60dp"
        android:fontFamily="@font/poppins"
        android:text="@string/_8_000"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:src="@drawable/img_virus"
        app:layout_constraintBottom_toBottomOf="@+id/tvPositive"
        app:layout_constraintEnd_toStartOf="@+id/tvPositive"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/tvPositive"
        android:contentDescription="@string/cont_desc" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_hospitalized"
        android:layout_width="320dp"
        android:layout_height="@dimen/_70dp"
        android:layout_marginTop="@dimen/_30dp"
        app:cardCornerRadius="@dimen/_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:elevation="@dimen/_300dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_dirawat"
            android:contentDescription="@string/cont_desc" />

        <ImageView
            android:layout_width="@dimen/_80dp"
            android:layout_height="@dimen/_70dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_20dp"
            android:src="@drawable/ic_dirawat"
            android:contentDescription="@string/cont_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_110dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins"
            android:text="@string/text_dirawat"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tvHospitalized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_205dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins"
            android:text="@string/_8_000"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_22sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_recover"
        android:layout_width="320dp"
        android:layout_height="@dimen/_70dp"
        android:layout_marginTop="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_hospitalized">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_sembuh"
            android:contentDescription="@string/cont_desc" />

        <ImageView
            android:layout_width="@dimen/_80dp"
            android:layout_height="@dimen/_70dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_20dp"
            android:src="@drawable/ic_sembuh"
            android:contentDescription="@string/cont_desc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_110dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins"
            android:text="@string/text_sembuh"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tvRecover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_205dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins"
            android:text="@string/_8_000"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_22sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_death"
        android:layout_width="320dp"
        android:layout_height="@dimen/_70dp"
        android:layout_marginTop="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_recover">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_meninggal"
            android:contentDescription="@string/cont_desc" />

        <ImageView
            android:layout_width="@dimen/_80dp"
            android:layout_height="@dimen/_70dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_20dp"
            android:src="@drawable/ic_meninggal"
            android:contentDescription="@string/cont_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_110dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins"
            android:text="@string/text_meninggal"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tvDeath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_205dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins"
            android:text="@string/_8_000"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_22sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnProvince"
        android:layout_width="@dimen/_200dp"
        android:layout_height="@dimen/_50dp"
        android:text="@string/text_provinsi"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_death"
        android:elevation="@dimen/_30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>