<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="4dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/text_nama_provinsi"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <View
            android:id="@+id/line1"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <View
            android:id="@+id/line2"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_positif"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/poppins"
            app:layout_constraintEnd_toStartOf="@+id/line1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sembuh"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/poppins"
            app:layout_constraintEnd_toStartOf="@+id/line2"
            app:layout_constraintStart_toEndOf="@+id/line1"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_meninggal"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/poppins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/line2"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cdPositive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_10dp"
            app:layout_constraintBottom_toBottomOf="@+id/line1"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/line1">

            <TextView
                android:id="@+id/tvPositive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8_000"
                android:background="@color/dark_blue"
                android:paddingStart="@dimen/_10dp"
                android:paddingEnd="@dimen/_10dp"
                android:textColor="@color/yellow"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvRecover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_10dp"
            app:layout_constraintBottom_toBottomOf="@+id/cdPositive"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/cdPositive" >

            <TextView
                android:id="@+id/tvRecover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3130"
                android:background="@color/dark_blue"
                android:paddingStart="@dimen/_10dp"
                android:paddingEnd="@dimen/_10dp"
                android:textColor="@color/green"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_10dp"
            app:layout_constraintBottom_toBottomOf="@+id/cvRecover"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/cvRecover" >

            <TextView
                android:id="@+id/tvDeath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_529"
                android:background="@color/dark_blue"
                android:paddingStart="@dimen/_10dp"
                android:paddingEnd="@dimen/_10dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/light_red"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>